client/client-envoy-auth.yaml
static_resources:
  listeners:
  # listener_0 accepts a raw TCP stream from the local TCP client.
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 127.0.0.1
        port_value: 7777
    filter_chains:
    - filters:
      - name: tcp
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_stats
          cluster: cluster_0

  # listener_1 accepts a TCP stream and tunnels it over an HTTP POST stream.
  - name: listener_1
    address:
      socket_address:
        protocol: TCP
        address: 127.0.0.1
        port_value: 11000
    filter_chains:
    - filters:
      - name: tcp
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          stat_prefix: tcp_stats
          cluster: cluster_1
          tunneling_config:
            hostname: CLOUD_RUN_SERVICE_HOSTNAME
            use_post: true

  # listener_2 adds authorization header.
  - name: listener_2
    address:
      socket_address:
        address: 127.0.0.1
        port_value: 11001
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          generate_request_id: false
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: cluster_2
                  timeout: 300s
          http_filters:
            - name: envoy.filters.http.ext_authz
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                http_service:
                  server_uri:
                    uri: http://test-auth.dev
                    cluster: "ext_authz_http_service"
                    timeout: 10s
                  authorization_response:
                    allowed_upstream_headers:
                      patterns:
                        - exact: authorization
            - name: envoy.filters.http.router

  clusters:
    # cluster_0 proxies a raw TCP stream into a mTLS TCP stream to local listener_1.
    - name: cluster_0
      connect_timeout: 5s
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 11000
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          common_tls_context:
            tls_certificates:
              certificate_chain: { "filename": "/etc/certs/cert.pem" }
              private_key: { "filename": "/etc/certs/key.pem" }

    # cluster_1 proxies HTTP stream to a local HTTP listener that adds authorization header.
    - name: cluster_1
      connect_timeout: 5s
      type: LOGICAL_DNS
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: cluster_1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 11001

    # cluster_2 proxies HTTP stream with a TLS HTTP/2 stream to Cloud Run.
    - name: cluster_2
      connect_timeout: 5s
      type: LOGICAL_DNS
      # Use IPv4 only because Docker doesn't support IPv6 excepts on Linux.
      dns_lookup_family: V4_ONLY
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: cluster_2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: CLOUD_RUN_SERVICE_HOSTNAME
                      port_value: 443
                      # For local testing, use the following IP:port
                      #address: 0.0.0.0
                      #port_value: 8080
      # For local testing, remove the following TLS socket.
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: CLOUD_RUN_SERVICE_HOSTNAME

    - name: ext_authz_http_service
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}
      load_assignment:
        cluster_name: ext_authz_http_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
